<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audio</name>
  <version>0.0.0</version>
  <description>Audio capture and publishing package for Duckiebot</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>MIT</license>
  
  <!-- Add other dependencies-->
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
